--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
         <div class="Information">
-            <h3>Embracing Minaimalism</h3>
+            <h3>Embracing Minimalism</h3>
             <p>From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.</p>
         </div>
             <div class="line-div">
